--- a/inventory/templates/index.html
+++ b/inventory/templates/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Main Page</title>
   <link rel="stylesheet" href="../styles/style.css" />
+  <title>Welcome</title>
 </head>
 <body>
+    <style>
+        body{
+            background-color: black;
+            color: azure;
+        }
+    </style>
   <div class="container">
-    <h1>Welcome to My Cool API</h1>
-    <p>This is the main page served with Civetweb + C.</p>
+    <h1>Hello, {{name}}!</h1>
+    <p>Welcome to our dynamic C-powered server.</p>
   </div>
 </body>
 </html>
